[gd_scene load_steps=5 format=3 uid="uid://e8pe3m78hakb"]

[ext_resource type="Script" path="res://spawn_system.gd" id="1_7mwcy"]
[ext_resource type="Texture2D" uid="uid://clu0v4qia0d4r" path="res://spawn-timer.png" id="1_hch3n"]
[ext_resource type="Texture2D" uid="uid://dqbdluccvunmt" path="res://heat-bar.png" id="2_dqudy"]
[ext_resource type="Texture2D" uid="uid://bxru8alirkn0n" path="res://boss-indicator.png" id="4_fnwws"]

[node name="SpawnSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7mwcy")

[node name="SpawnTimerFill" type="ColorRect" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SpawnTimer" type="TextureRect" parent="SpawnTimerFill"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
texture = ExtResource("1_hch3n")

[node name="HeatBarFill" type="ColorRect" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HeatBar" type="TextureRect" parent="HeatBarFill"]
layout_mode = 0
offset_top = -648.0
offset_right = 1152.0
mouse_filter = 2
texture = ExtResource("2_dqudy")

[node name="BossIndicator" type="Sprite2D" parent="."]
visible = false
position = Vector2(1115, 64)
texture = ExtResource("4_fnwws")
